--- a/Angular14-Masterclass/TypeScript/index.html
+++ b/Angular14-Masterclass/TypeScript/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hello</h1>
 </body>
 <script src="index.ts"></script>
 <script src="classes.js"></script>
